/* ========================= eCAL LICENSE =================================
 *
 * Copyright (C) 2016 - 2019 Continental Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * 
 *      http://www.apache.org/licenses/LICENSE-2.0
 * 
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 * ========================= eCAL LICENSE =================================
*/

syntax = "proto3";

package eCAL.pb.rec;

message State
{
  message WriterState
  {
    bool          recording                    =  1;
	bool          flushing                     =  2;
    int64         recording_length_frame_count =  3;
    double        recording_length_secs        =  4;
    int64         queued_frames_count          =  5;
    double        queued_secs                  =  6;
  }
 
  reserved 1 to 10; // eCAL Rec 1 fields
  
  string               hostname                         = 11;
  int32                pid                              = 12;
  bool                 initialized                      = 13;
  WriterState          main_recorder_state              = 14;
  int64                pre_buffer_length_frames_count   = 20;
  double               pre_buffer_length_secs           = 21;
  repeated WriterState buffer_writer_states             = 22;
  repeated string      subscribed_topics                = 23;
}